Bug 1785003 - Fix resource leak in nsImapMailFolder::CompactAll. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D154710